# iShareScreen

./: .gitignore  README.md  pyproject.toml
docs/: apple_vnc_rfc.md  frame_interpolation_prototype_plan.md  frame_interpolation_research.md
src/isharescreen/: cli.py
src/isharescreen/frontend/desktop/: app.py  audio_sink.py  gpu.py  keyboard_grab.py  keymap.py
src/isharescreen/frontend/wt/: __init__.py  audio.py  cert.py  server.py
src/isharescreen/frontend/wt/static/: audio-worklet.js  index.html
src/isharescreen/gui/: __init__.py  connect.py
src/isharescreen/proxy/: control.py  input.py  local_clipboard.py  session.py
src/isharescreen/proxy/media/: avc.py  avc_nalu.py  decode_common.py  hevc.py  hevc_rps.py  hwcaps.py  nalu.py  qsvhevc.py  quality_gate.py  registry.py  vtdecode.py
src/isharescreen/proxy/protocol/: apple.py  burst.py  clipboard.py  enc1103.py  negotiation.py  offers.py  rfb.py  rtcp.py  srtp.py
src/isharescreen/tui/: __init__.py  app.py  connect_screen.py  control_client.py  entry.py  session_screen.py  storage.py  supervisor.py
src/isharescreen/util/: __init__.py  pcap_recorder.py
tests/: test_chroma_passthrough.py  test_decode_recovery.py  test_decoder_registry.py  test_hidpi_resolution.py  test_pertile_recovery.py  test_quality_gate_recovery.py  test_stall_watchdog.py  test_tui_log_autoscroll.py
tools/: noise_load.html  profile_headless.py
tools/dissector/: README.md  dissector_cli.py  requirements.txt
tools/dissector/libs/: __init__.py  capture_reader.py  cbc_records.py  framebuffer.py  hevc_depay.py  hevc_render.py  message_parser.py  mode_adaptive.py  mode_rfb.py  output_jsonl.py  rect_decoders.py  session_state.py  srtp.py  stream_selector.py  tcp_reassembly.py  timeline.py  types.py  udp_media.py  video_writer.py
